Tenemos fe Dios

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,11 @@
             <h6 class="nav-section-title">Gestión Académica</h6>
             <ul class="navbar-nav flex-column w-100">
               <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('evaluacion_integral_bp.gestionar_criterios') }}">
+                  <i class="bi bi-list-check"></i><span>Gestión de Ámbitos Parvularia</span>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('admin_dashboard') }}">
                   <i class="bi bi-house-door"></i><span>Dashboard</span>
                 </a>
@@ -120,6 +125,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('coordinador.dashboard') }}">
                   <i class="bi bi-house-door"></i><span>Dashboard</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('evaluacion_integral_bp.gestionar_criterios') }}">
+                  <i class="bi bi-list-check"></i><span>Gestión de Ámbitos Parvularia</span>
                 </a>
               </li>
               <li class="nav-item">
